--- a/main.css
+++ b/main.css
@@ -2279,15 +2279,6 @@ padding: 0.8em 0em 0;
 
 /* ---- hide/show --------- */
 /* ---- password textbox --------- */
-.input-field {
-    position: absolute;
-    top: 50%;
-    /* position the top  edge of the element at the middle of the parent */
-    left: 50%;
-    /* position the left edge of the element at the middle of the parent */
-    transform: translate(-50%, -50%);
-    /* This is a shorthand of translateX(-50%) and translateY(-50%) */
-}
 
 input {
     width: 16em;
@@ -2300,28 +2291,37 @@ input {
     outline: none;
     box-shadow: 4px 4px 0px var(--Grey400);
 }
-
-.input-field button {
-    width: 1.8rem;
-    text-align: center;
-    font-size: 1.2rem;
-    background: transparent;
-    border: none;
+.input-field {
+    display: flex; /* Add flex */
+    align-items: center; /* Vertically center children */
+    justify-content: center; /* Horizontally center children */
     position: absolute;
     top: 50%;
-    transform: translateY(-50%);
-    right: 13px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.input-field button img {
+    animation: arrowani 0.8s linear infinite alternate;
+}
+
+.input-field button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 1.8rem;
+    height: 42px;
+    background: transparent;
+    border: none;
     cursor: pointer;
     color: var(--Grey900);
-    animation: arrowani 0.8s linear infinite alternate;
 }
 
 button.passwordArr {
     z-index: 98;
     padding: 0;
-    margin-top: -21px;
     color: var(--Grey900);
 }
+
 
 .pwIncorrectHeight {
     height: 3em;
