--- a/main.css
+++ b/main.css
@@ -2279,6 +2279,13 @@ padding: 0.8em 0em 0;
 
 /* ---- hide/show --------- */
 /* ---- password textbox --------- */
+.PWinput:focus {
+    background-color: var(--white);
+    border-radius: 10px;
+    border: 3px solid rgba(170, 217, 217, 0.2);
+    box-shadow: inset 0 0 0 1px rgba(143, 191, 191, 0.6);
+
+  }
 
 input {
     width: 16em;
@@ -2287,7 +2294,7 @@ input {
     background: var(--white);
     border: 1px solid var(--Grey800);
     font-size: 16px;
-    border-radius: 3px;
+    border-radius: 10px;
     outline: none;
     box-shadow: 4px 4px 0px var(--Grey400);
 }
@@ -2310,7 +2317,7 @@ input {
     align-items: center;
     justify-content: center;
     width: 1.8rem;
-    height: 90px;
+    height: 96px;
     background: transparent;
     border: none;
     cursor: pointer;
