--- a/main.css
+++ b/main.css
@@ -2284,9 +2284,13 @@ padding: 0.8em 0em 0;
     border-radius: 10px;
     border: 3px solid rgba(170, 217, 217, 0.2);
     box-shadow: inset 0 0 0 1px rgba(143, 191, 191, 0.6);
-
   }
-
+  .PWinputLanding:focus {
+    background-color: var(--white);
+    border-radius: 10px;
+    border: 4px solid rgba(255, 255, 255, 0.9);
+    box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.6);
+  }
 input {
     width: 16em;
     height: 42px;
