--- a/main.css
+++ b/main.css
@@ -6464,10 +6464,10 @@ button {
     position: absolute;
     top: 50%;
     left: 50%;
-    font-size: 2.5vmin;
+    font-size: 2.3vmin;
     line-height: 2.6vmin;
     font-family: inherit;
-    font-weight: bold;
+    font-weight: 500;
     transition: transform 0.5s linear, opacity 0.5s linear;
 }
 
