--- a/LASO/main.css
+++ b/LASO/main.css
@@ -2,7 +2,7 @@ html {
     scroll-behavior: smooth;
     color: var(--Grey800);
     font-size: 16px;
-    font-family: 'inter';
+    font-family: 'Inter', sans-serif;
     height: var(--height100);
 }
 
@@ -421,6 +421,7 @@ body {
     min-height: 100vh;
     /* mobile viewport bug fix */
     min-height: -webkit-fill-available;
+    background: #F5F5F7;
 
 }
 
@@ -559,6 +560,44 @@ a:link.textProject {
 }
 
 /* ===== bg color grey ===== */
+/* ======== paddings ========= */
+
+.paddingXS {
+    padding: var(--paddingXS);
+    width: fit-content;
+}
+
+.paddingS {
+    padding: var(--paddingS);
+    width: fit-content;
+
+}
+
+.paddingM {
+    padding: var(--paddingM);
+    width: fit-content;
+
+}
+
+.paddingL {
+    padding: var(--paddingL);
+    width: fit-content;
+
+}
+
+.paddingXL {
+    padding: var(--paddingXL);
+    width: fit-content;
+
+}
+
+.paddingMax {
+    padding: var(--paddingMax);
+    width: fit-content;
+
+}
+
+/* ======== paddings ========= */
 /* ======== width & height V2 New ========= */
 .iconXS {
     width: 16px;
@@ -610,18 +649,15 @@ a:link.textProject {
 }
 
 
-.IconM_MP_GH {
-    width: 8rem;
-    margin-right: 10px;
-}
 
 .widthFitContent {
     width: max-content;
 }
-
+.widthXXXS {
+    width: 6em;
+}
 .widthXXS {
     width: 8em;
-
 }
 
 .widthXS {
