--- a/main.css
+++ b/main.css
@@ -2040,156 +2040,6 @@ hr {
 
 
 
-/* elementCard = bottom border */
-.elementCard {
-    padding: 0;
-    margin: 0;
-    border-style: ridge;
-    border-radius: var(--border-radius);
-    -moz-border-radius: var(--border-radius);
-    -webkit-border-radius: var(--border-radius);
-
-    /*  
-    transition: background-color 0.3s ease;
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.15);
-
-    opacity: 0.7;
-    filter: alpha(opacity=70); */
-}
-
-.elementCard.WS:hover {
-    cursor: pointer;
-    border-bottom: 5px solid var(--WS-Blue);
-    transition: all 0.25s ease-in;
-    /*  opacity: 1.0;
-    filter: alpha(opacity=100);*/
-}
-
-.elementCard.LASO:hover {
-    cursor: pointer;
-    border-bottom: 5px solid var(--AMBlue);
-    transition: all 0.25s ease-in;
-    /*  opacity: 1.0;
-    filter: alpha(opacity=100);*/
-}
-
-.elementCard.GLORIFY:hover {
-    cursor: pointer;
-    border-bottom: 5px solid var(--GLORIFY-orangeBgLt);
-    transition: all 0.25s ease-in;
-    /*  opacity: 1.0;
-    filter: alpha(opacity=100);*/
-}
-
-.elementCard.APPOINTA:hover {
-    cursor: pointer;
-    border-bottom: 5px solid var(--APPOINTA-blue);
-    transition: all 0.25s ease-in;
-    /*  opacity: 1.0;
-    filter: alpha(opacity=100);*/
-}
-
-.elementCard.SEER:hover {
-    cursor: pointer;
-    border-bottom: 5px solid var(--seer-purple);
-    transition: all 0.25s ease-in;
-    /*  opacity: 1.0;
-    filter: alpha(opacity=100);*/
-}
-
-.elementCard.toasttab:hover {
-    cursor: pointer;
-    border-bottom: 5px solid var(--toasttab);
-    transition: all 0.25s ease-in;
-    /*  opacity: 1.0;
-    filter: alpha(opacity=100);*/
-}
-
-.elementCard.GardenersHub:hover {
-    cursor: pointer;
-    border-bottom: 5px solid var(--GardenersHub);
-    transition: all 0.25s ease-in;
-    /*  opacity: 1.0;
-    filter: alpha(opacity=100);*/
-}
-
-.elementCard:hover {
-    cursor: pointer;
-    border-bottom: 5px solid var(--Grey900);
-    transition: all 0.25s ease-in;
-    /*  opacity: 1.0;
-    filter: alpha(opacity=100);*/
-}
-
-.elementSeerDivider {
-    background: linear-gradient(140deg, #FFFFFF, #e9f2ff 20%, #fff1f5 50%, #FFFFFF);
-    height: 6px;
-}
-
-.elementSEER {
-    background: linear-gradient(140deg, #d8f2ff, #cad6ff, #e6dbff, #cbd8ff);
-    padding: 4px;
-    margin-bottom: 1em;
-    transition: background-color 0.3s ease;
-    border-radius: 34px;
-    -webkit-border-radius: 34px;
-    -moz-border-radius: 34px;
-}
-
-.elementInnerSEER {
-    background: rgba(255, 255, 255, 0.7);
-    padding: 2em;
-    transition: background-color 0.3s ease;
-    border-radius: 30px;
-}
-
-.elementDemoCard {
-    background: linear-gradient(140deg, #f7fcff, #ecf0fb, #f8f5ff, #ecf1ff);
-    padding: 4px;
-    margin-bottom: 1em;
-    transition: background-color 0.3s ease;
-    border-radius: 34px;
-    -webkit-border-radius: 34px;
-    -moz-border-radius: 34px;
-}
-
-.elementInnerDemoCard {
-    background: rgba(255, 255, 255, 0.7);
-    padding: 2em;
-    transition: background-color 0.3s ease;
-    border-radius: 30px;
-}
-
-/* ---- must always have for responsive*/
-.element {
-    padding: 0.4em 0.8em 0;
-    /* ----     0.8em 1em 0 0;  top, right, bottom, left;
-
-
-padding: 0.8em 0em 0;
-/* ----     padding: 0.8em top 1em right and left 0 bottom; ----*/
-
-    margin-bottom: 0.8em;
-    transition: background-color 0.3s ease;
-}
-
-.elementButton {
-    transition: background-color 0.3s ease;
-    border-radius: 3px;
-}
-
-.elementInner {
-    padding: 1em;
-    transition: background-color 0.3s ease;
-    border-radius: 3px;
-}
-
-.elementInnerL {
-    padding: 2em;
-    transition: background-color 0.3s ease;
-    border-radius: 3px;
-}
-
 /* ---- password --------- */
 
 .password {
@@ -2534,138 +2384,7 @@ button.passwordArr {
 }
 
 /* accordion */
-.element:after {
-    content: "";
-    display: block;
-    margin-top: 0.8em;
-    height: 1px;
-}
 
-.element:hover {
-    background: var();
-}
-
-.element.Holly {
-    background: rgba(102, 51, 255, 0.1);
-}
-
-.element.Holly:hover {
-    background: rgba(102, 51, 255, 0.25);
-}
-
-.Grid--gutters .Grid--nested .Grid-cell:first-of-type .element {
-    margin-right: 1em;
-}
-
-/* element = elementDemo */
-
-.elementDemo {
-    padding: 0.4em 0.8em 0;
-    margin-bottom: 0.8em;
-    border-radius: var(--border-radiusXS);
-    border: 0.01em solid var(--Warm);
-    background: var(--Warm);
-    transition: background-color 0.3s ease;
-}
-
-.elementInnerDemo {
-    padding: 0.8em 0.4em;
-    transition: background-color 0.3s ease;
-    border-radius: var(--border-radiusXS);
-    border: 0.01em solid var(--colorTealDk);
-    background: var(--colorTealLtest);
-    transition: background-color 0.3s ease;
-}
-
-.elementInnerDemo:hover {
-    background: var(--colorTealLtr);
-}
-
-/* element = demo */
-
-.Demo {
-    font-family: inherit;
-    font-weight: 300;
-    padding: 0.8em 1em 0;
-    /*top 0.8, left and right 1*/
-    margin-bottom: 0.4em;
-    border-radius: 6px;
-    /*     border: 0.06em solid var(--GLORIFY-orange); */
-
-    color: var(--colorTealDk);
-    background: var(--Warm);
-    transition: background-color 0.3s ease;
-}
-
-.Demo:after {
-    content: "";
-    display: block;
-    margin-top: 0.8em;
-    /*button 0.8*/
-    height: 1px;
-
-}
-
-.Demo:hover {
-    background: var(--colorTealLtr);
-}
-
-.Demo.Holly {
-    background: rgba(102, 51, 255, 0.1);
-}
-
-.Demo.Holly:hover {
-    background: rgba(102, 51, 255, 0.25);
-}
-
-.Grid--gutters {
-    margin-left: -0.4em;
-}
-
-.Grid--gutters .Grid-cell {
-    padding-left: 0.4em;
-}
-
-.Grid--gutters .Grid--nested .Grid-cell:first-of-type .Demo {
-    margin-right: 1em;
-}
-
-/* Justify per row*/
-.Grid--right {
-    justify-content: flex-end;
-}
-
-.Grid--center {
-    justify-content: center;
-}
-
-/* Alignment per row */
-.Grid--top {
-    align-items: flex-start;
-}
-
-.Grid--bottom {
-    align-items: flex-end;
-}
-
-.Grid--center {
-    align-items: center;
-}
-
-/* Alignment per cell */
-.Grid-cell--top {
-    align-self: flex-start;
-}
-
-.Grid-cell--bottom {
-    align-self: flex-end;
-}
-
-.Grid-cell--center {
-    align-self: center;
-}
-
-/* changed media query from 800 to 1000*/
 
 .wrapper {
     max-width: 1200px;
@@ -3148,7 +2867,7 @@ button.passwordArr {
 
 }
 
-/* ------------------- Responsive grid -------------------*/
+/* ============================= Responsive grid ============================= */
 
 
 /*Basic Grid Styles*/
@@ -3166,12 +2885,6 @@ button.passwordArr {
     flex: 1;
 }
 
-
-
-
-
-
-/*===========================================*/
 /* Base classes for all media - Mobile first */
 .Grid--cols-2>.Grid-cell {
     flex: 0 0 96%;
@@ -3384,13 +3097,297 @@ flex: 0 0 calc(33.3333% - 1em);
 
 }
 
+/* ---- element ----*/
+.element:after {
+    content: "";
+    display: block;
+    margin-top: 0.8em;
+    height: 1px;
+}
+
+.element:hover {
+    background: var();
+}
+
+.element.Holly {
+    background: rgba(102, 51, 255, 0.1);
+}
+
+.element.Holly:hover {
+    background: rgba(102, 51, 255, 0.25);
+}
+
+.Grid--gutters .Grid--nested .Grid-cell:first-of-type .element {
+    margin-right: 1em;
+}
+
+/* element = elementDemo */
+
+.elementDemo {
+    padding: 0.4em 0.8em 0;
+    margin-bottom: 0.8em;
+    border-radius: var(--border-radiusXS);
+    border: 0.01em solid var(--Warm);
+    background: var(--Warm);
+    transition: background-color 0.3s ease;
+}
+
+.elementInnerDemo {
+    padding: 0.8em 0.4em;
+    transition: background-color 0.3s ease;
+    border-radius: var(--border-radiusXS);
+    border: 0.01em solid var(--colorTealDk);
+    background: var(--colorTealLtest);
+    transition: background-color 0.3s ease;
+}
+
+.elementInnerDemo:hover {
+    background: var(--colorTealLtr);
+}
+
+/* element = demo */
+
+.Demo {
+    font-family: inherit;
+    font-weight: 300;
+    padding: 0.8em 1em 0;
+    /*top 0.8, left and right 1*/
+    margin-bottom: 0.4em;
+    border-radius: 6px;
+    /*     border: 0.06em solid var(--GLORIFY-orange); */
+
+    color: var(--colorTealDk);
+    background: var(--Warm);
+    transition: background-color 0.3s ease;
+}
+
+.Demo:after {
+    content: "";
+    display: block;
+    margin-top: 0.8em;
+    /*button 0.8*/
+    height: 1px;
+
+}
+
+.Demo:hover {
+    background: var(--colorTealLtr);
+}
+
+.Demo.Holly {
+    background: rgba(102, 51, 255, 0.1);
+}
+
+.Demo.Holly:hover {
+    background: rgba(102, 51, 255, 0.25);
+}
+
+.Grid--gutters {
+    margin-left: -0.4em;
+}
+
+.Grid--gutters .Grid-cell {
+    padding-left: 0.4em;
+}
+
+.Grid--gutters .Grid--nested .Grid-cell:first-of-type .Demo {
+    margin-right: 1em;
+}
+
+/* Justify per row*/
+.Grid--right {
+    justify-content: flex-end;
+}
+
+.Grid--center {
+    justify-content: center;
+}
+
+/* Alignment per row */
+.Grid--top {
+    align-items: flex-start;
+}
+
+.Grid--bottom {
+    align-items: flex-end;
+}
+
+.Grid--center {
+    align-items: center;
+}
+
+/* Alignment per cell */
+.Grid-cell--top {
+    align-self: flex-start;
+}
+
+.Grid-cell--bottom {
+    align-self: flex-end;
+}
+
+.Grid-cell--center {
+    align-self: center;
+}
+
+/* changed media query from 800 to 1000*/
+
+/* elementCard = bottom border */
+.elementCard {
+    padding: 0;
+    margin: 0;
+    border-style: ridge;
+    border-radius: var(--border-radius);
+    -moz-border-radius: var(--border-radius);
+    -webkit-border-radius: var(--border-radius);
+
+    /*  
+    transition: background-color 0.3s ease;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.15);
+
+    opacity: 0.7;
+    filter: alpha(opacity=70); */
+}
+
+.elementCard.WS:hover {
+    cursor: pointer;
+    border-bottom: 5px solid var(--WS-Blue);
+    transition: all 0.25s ease-in;
+    /*  opacity: 1.0;
+    filter: alpha(opacity=100);*/
+}
+
+.elementCard.LASO:hover {
+    cursor: pointer;
+    border-bottom: 5px solid var(--AMBlue);
+    transition: all 0.25s ease-in;
+    /*  opacity: 1.0;
+    filter: alpha(opacity=100);*/
+}
+
+.elementCard.GLORIFY:hover {
+    cursor: pointer;
+    border-bottom: 5px solid var(--GLORIFY-orangeBgLt);
+    transition: all 0.25s ease-in;
+    /*  opacity: 1.0;
+    filter: alpha(opacity=100);*/
+}
+
+.elementCard.APPOINTA:hover {
+    cursor: pointer;
+    border-bottom: 5px solid var(--APPOINTA-blue);
+    transition: all 0.25s ease-in;
+    /*  opacity: 1.0;
+    filter: alpha(opacity=100);*/
+}
+
+.elementCard.SEER:hover {
+    cursor: pointer;
+    border-bottom: 5px solid var(--seer-purple);
+    transition: all 0.25s ease-in;
+    /*  opacity: 1.0;
+    filter: alpha(opacity=100);*/
+}
+
+.elementCard.toasttab:hover {
+    cursor: pointer;
+    border-bottom: 5px solid var(--toasttab);
+    transition: all 0.25s ease-in;
+    /*  opacity: 1.0;
+    filter: alpha(opacity=100);*/
+}
+
+.elementCard.GardenersHub:hover {
+    cursor: pointer;
+    border-bottom: 5px solid var(--GardenersHub);
+    transition: all 0.25s ease-in;
+    /*  opacity: 1.0;
+    filter: alpha(opacity=100);*/
+}
+
+.elementCard:hover {
+    cursor: pointer;
+    border-bottom: 5px solid var(--Grey900);
+    transition: all 0.25s ease-in;
+    /*  opacity: 1.0;
+    filter: alpha(opacity=100);*/
+}
+
+.elementSeerDivider {
+    background: linear-gradient(140deg, #FFFFFF, #e9f2ff 20%, #fff1f5 50%, #FFFFFF);
+    height: 6px;
+}
+
+.elementSEER {
+    background: linear-gradient(140deg, #d8f2ff, #cad6ff, #e6dbff, #cbd8ff);
+    padding: 4px;
+    margin-bottom: 1em;
+    transition: background-color 0.3s ease;
+    border-radius: 34px;
+    -webkit-border-radius: 34px;
+    -moz-border-radius: 34px;
+}
+
+.elementInnerSEER {
+    background: rgba(255, 255, 255, 0.7);
+    padding: 2em;
+    transition: background-color 0.3s ease;
+    border-radius: 30px;
+}
+
+.elementDemoCard {
+    background: linear-gradient(140deg, #f7fcff, #ecf0fb, #f8f5ff, #ecf1ff);
+    padding: 4px;
+    margin-bottom: 1em;
+    transition: background-color 0.3s ease;
+    border-radius: 34px;
+    -webkit-border-radius: 34px;
+    -moz-border-radius: 34px;
+}
+
+.elementInnerDemoCard {
+    background: rgba(255, 255, 255, 0.7);
+    padding: 2em;
+    transition: background-color 0.3s ease;
+    border-radius: 30px;
+}
+
+/* ---- must always have for responsive*/
+.element {
+    padding: 0.4em 0.8em 0;
+    /* ----     0.8em 1em 0 0;  top, right, bottom, left;
+
+
+padding: 0.8em 0em 0;
+/* ----     padding: 0.8em top 1em right and left 0 bottom; ----*/
+
+    margin-bottom: 0.8em;
+    transition: background-color 0.3s ease;
+}
+
+.elementButton {
+    transition: background-color 0.3s ease;
+    border-radius: 3px;
+}
+
+.elementInner {
+    padding: 1em;
+    transition: background-color 0.3s ease;
+    border-radius: 3px;
+}
+
+.elementInnerL {
+    padding: 2em;
+    transition: background-color 0.3s ease;
+    border-radius: 3px;
+}
+/* ---- element ----*/
+
+/* ============================= Responsive grid ============================= */
 
 
 
 
-
-/* ------------------- Responsive grid -------------------*/
-/* ------------------- LRcarousel -------------------*/
+/* ============================= LRcarousel ============================= */
 .LRcarousel {
     overflow: hidden;
     display: flex;
@@ -3575,7 +3572,8 @@ flex: 0 0 calc(33.3333% - 1em);
 
 
 
-/* ------------------- LRcarousel -------------------*/
+/* ============================= LRcarousel ============================= */
+
 
 /* ------------------- TBcarousel -------------------*/
 .TBcarousel {
